docs: rewrite 4 developer guides + English translations + cleanup 30 old docs
Guides rewritten with concrete file paths from real examples:
- junior-dev-guide.md — architecture, build, event routing, quick reference
- sbb-guide.md — stateless/stateful SBB, CMP, timer, child SBB, checklist
- ra-guide.md — 3-port contract, transport, session registry, tests
- app-guide.md — bootstrap, pom.xml, collaborator injection, smoke test

Each guide now includes "Real Source Tree" appendix with exact
file paths from example-quarkus-sip and ra-sip-servlet.

English translations: docs/en/*.md (4 files, full translations)

Cleanup: removed 30 old obsolete design/proposal docs (19K lines).

Also:
- ra-sip-servlet: redesigned transport layer with per-peer Channel
  registry, SipMessageSink, SipTcpFrameDecoder, NettySipOutboundSender
- ra-sip-servlet: added 3 test suites (E2E, dialog lifecycle, TCP frame)
- jainslee-core: EventRouter routing index thread safety fix

Total: 394 tests pass (381 core + 13 SIP RA)